--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Carthage/Checkouts/SQLite.swift"]
-	path = Carthage/Checkouts/SQLite.swift
-	url = https://github.com/stephencelis/SQLite.swift.git
+[submodule "Carthage/Checkouts/SQLiteSwift"]
+	path = Carthage/Checkouts/SQLiteSwift
+	url = https://github.com/hosy/SQLiteSwift.git
